Minor PG revision

--- a/Developer/ProgrammingGuide/cover.tex
+++ b/Developer/ProgrammingGuide/cover.tex
@@ -26,13 +26,13 @@
 \begin{textblock}{}(16.48,3.92)
   \begin{rotate}{270}
     \setlength{\fboxsep}{9.4pt} 
-    \colorbox{red}{\textsf{\bfseries\LARGE\textcolor{white}{{\hspace{12pt}Equalizer
-            Programming and User Guide\hspace{12pt}}}}}
+    \colorbox{red}{\textsf{\bfseries\Large\textcolor{white}{{\hspace{38pt}Equalizer
+            Programming and User Guide\hspace{38pt}}}}}
   \end{rotate}
 \end{textblock}
 
 \begin{textblock}{}(16.38,13)
-  {\Large 1.2}
+  {\large 1.2}
 \end{textblock}
 
 \parbox[t]{\spacewidth}{\hfill}
